--- a/LatticeOptics/submission_rev_sci_inst_revised/latticeoptics.bib
+++ b/LatticeOptics/submission_rev_sci_inst_revised/latticeoptics.bib
@@ -442,3 +442,23 @@ publisher = {Cambridge University Press},
 title = {{The Art of Electronics}},
 year = {2015}
 }
+
+@article{kwee12,
+  title = {Stabilized high-power laser system for the gravitational wave detector advanced LIGO},
+  author = {P. Kwee and C. Bogan and K. Danzmann and M. Frede and H. Kim and P. King and J. P{\"o}ld and O. Puncken and R. L. Savage and F. Seifert and P. Wessels and L. Winkelmann and B. Willke},
+  journal = {Optics Express},
+  year = {2012},
+  volume = {20},
+  pages = {10617},
+  doi = {10.1364/OE.20.010617},
+}
+
+@article{guiraud16,
+  title = {High-power and low-intensity noise laser at 1064  nm},
+  author = {Germain Guiraud and Nicholas Traynor and Giorgio Santarelli},
+  journal = {Optics Letters},
+  year = {2016},
+  volume = {41},
+  pages = {4040},
+  doi = {10.1364/OL.41.004040},
+}
