--- a/LatticeOptics/submission_rev_sci_inst_revised/latticeoptics.tex
+++ b/LatticeOptics/submission_rev_sci_inst_revised/latticeoptics.tex
@@ -47,6 +47,8 @@ In particular, experiments that rely on a small number of atoms held by multiple
 In this work we discuss major improvements to our high power optical lattice system~\cite{Blatt2015} and show levels of intensity noise below \unit{-115}{dBc/Hz} between \unit{1}{kHz} and \unit{3}{MHz} Fourier frequency.
 In addition to the intensity stability, we demonstrate a short-term (shot-to-shot) stability of the lattice position at 1.4\% of the optical lattice spacing, and a long-term (six month) relative stability of 0.5\% RMS of the lattice spacing itself.
 
+For context, typical high-power, low-noise \unit{1064}{nm} laser systems are based amplifying a seed laser with either a fiber or solid-state amplifier. Solid-state amplifiers can attain impressive performance. For example, the laser system used for gravitational wave detection at advanced LIGO exceeds \unit{-150}{dBc/Hz} in the \unit{10}{Hz} - \unit{1}{kHz} frequency range for a constant output power~\cite{kwee12}. In this work, we achieve \unit{-120}{dBc/Hz} intensity stability in the \unit{1}{kHz} - \unit{2}{MHz} frequency range, and maintain this performance over six orders of magnitude in output power. Our modifications to the fiber amplifier hardware allow us to rival and exceed the power and noise performance of more modern commercial fiber amplifiers~\cite{guiraud16}.
+
 \begin{figure}[t]
   \begin{center}
     \includegraphics[width=0.8\columnwidth]{Figure1.pdf}
@@ -462,519 +464,7 @@ To further improve the system's performance, the system can be upgraded in a var
 Active stabilization of the laser pointing can improve the pointing stability further.
 The high degree of lattice stability demonstrated here has already enabled first investigations of entropy redistribution schemes involving multiple traps that made it possible to observe antiferromagnetic ordering in two-dimensional Fermi gases~\cite{Mazurenko2017} and to engineer low-entropy quantum states~\cite{Chiu2018}.
 
-% \bibliography{latticeoptics}
-
-% merlin.mbs apsrev4-1.bst 2010-07-25 4.21a (PWD, AO, DPC) hacked
-%Control: key (0)
-%Control: author (8) initials jnrlst
-%Control: editor formatted (1) identically to author
-%Control: production of article title (-1) disabled
-%Control: page (0) single
-%Control: year (1) truncated
-%Control: production of eprint (0) enabled
-\begin{thebibliography}{34}%
-\makeatletter
-\providecommand \@ifxundefined [1]{%
- \@ifx{#1\undefined}
-}%
-\providecommand \@ifnum [1]{%
- \ifnum #1\expandafter \@firstoftwo
- \else \expandafter \@secondoftwo
- \fi
-}%
-\providecommand \@ifx [1]{%
- \ifx #1\expandafter \@firstoftwo
- \else \expandafter \@secondoftwo
- \fi
-}%
-\providecommand \natexlab [1]{#1}%
-\providecommand \enquote  [1]{``#1''}%
-\providecommand \bibnamefont  [1]{#1}%
-\providecommand \bibfnamefont [1]{#1}%
-\providecommand \citenamefont [1]{#1}%
-\providecommand \href@noop [0]{\@secondoftwo}%
-\providecommand \href [0]{\begingroup \@sanitize@url \@href}%
-\providecommand \@href[1]{\@@startlink{#1}\@@href}%
-\providecommand \@@href[1]{\endgroup#1\@@endlink}%
-\providecommand \@sanitize@url [0]{\catcode `\\12\catcode `\$12\catcode
-  `\&12\catcode `\#12\catcode `\^12\catcode `\_12\catcode `\%12\relax}%
-\providecommand \@@startlink[1]{}%
-\providecommand \@@endlink[0]{}%
-\providecommand \url  [0]{\begingroup\@sanitize@url \@url }%
-\providecommand \@url [1]{\endgroup\@href {#1}{\urlprefix }}%
-\providecommand \urlprefix  [0]{URL }%
-\providecommand \Eprint [0]{\href }%
-\providecommand \doibase [0]{http://dx.doi.org/}%
-\providecommand \selectlanguage [0]{\@gobble}%
-\providecommand \bibinfo  [0]{\@secondoftwo}%
-\providecommand \bibfield  [0]{\@secondoftwo}%
-\providecommand \translation [1]{[#1]}%
-\providecommand \BibitemOpen [0]{}%
-\providecommand \bibitemStop [0]{}%
-\providecommand \bibitemNoStop [0]{.\EOS\space}%
-\providecommand \EOS [0]{\spacefactor3000\relax}%
-\providecommand \BibitemShut  [1]{\csname bibitem#1\endcsname}%
-\let\auto@bib@innerbib\@empty
-%</preamble>
-\bibitem [{\citenamefont {Friedenauer}\ \emph {et~al.}(2008)\citenamefont
-  {Friedenauer}, \citenamefont {Schmitz}, \citenamefont {Glueckert},
-  \citenamefont {Porras},\ and\ \citenamefont {Schaetz}}]{Friedenauer2008}%
-  \BibitemOpen
-  \bibfield  {author} {\bibinfo {author} {\bibfnamefont {A.}~\bibnamefont
-  {Friedenauer}}, \bibinfo {author} {\bibfnamefont {H.}~\bibnamefont
-  {Schmitz}}, \bibinfo {author} {\bibfnamefont {J.~T.}\ \bibnamefont
-  {Glueckert}}, \bibinfo {author} {\bibfnamefont {D.}~\bibnamefont {Porras}}, \
-  and\ \bibinfo {author} {\bibfnamefont {T.}~\bibnamefont {Schaetz}},\ }\href
-  {\doibase 10.1038/nphys1032} {\bibfield  {journal} {\bibinfo  {journal}
-  {Nature Physics}\ }\textbf {\bibinfo {volume} {4}},\ \bibinfo {pages} {757}
-  (\bibinfo {year} {2008})}\BibitemShut {NoStop}%
-\bibitem [{\citenamefont {Kim}\ \emph {et~al.}(2010)\citenamefont {Kim},
-  \citenamefont {Chang}, \citenamefont {Korenblit}, \citenamefont {Islam},
-  \citenamefont {Edwards}, \citenamefont {Freericks}, \citenamefont {Lin},
-  \citenamefont {Duan},\ and\ \citenamefont {Monroe}}]{Kim2010}%
-  \BibitemOpen
-  \bibfield  {author} {\bibinfo {author} {\bibfnamefont {K.}~\bibnamefont
-  {Kim}}, \bibinfo {author} {\bibfnamefont {M.-S.}\ \bibnamefont {Chang}},
-  \bibinfo {author} {\bibfnamefont {S.}~\bibnamefont {Korenblit}}, \bibinfo
-  {author} {\bibfnamefont {R.}~\bibnamefont {Islam}}, \bibinfo {author}
-  {\bibfnamefont {E.~E.}\ \bibnamefont {Edwards}}, \bibinfo {author}
-  {\bibfnamefont {J.~K.}\ \bibnamefont {Freericks}}, \bibinfo {author}
-  {\bibfnamefont {G.-D.}\ \bibnamefont {Lin}}, \bibinfo {author} {\bibfnamefont
-  {L.-M.}\ \bibnamefont {Duan}}, \ and\ \bibinfo {author} {\bibfnamefont
-  {C.}~\bibnamefont {Monroe}},\ }\href {\doibase 10.1038/nature09071}
-  {\bibfield  {journal} {\bibinfo  {journal} {Nature}\ }\textbf {\bibinfo
-  {volume} {465}},\ \bibinfo {pages} {590} (\bibinfo {year}
-  {2010})}\BibitemShut {NoStop}%
-\bibitem [{\citenamefont {Struck}\ \emph {et~al.}(2011)\citenamefont {Struck},
-  \citenamefont {{\"{O}}lschl{\"{a}}ger}, \citenamefont {{Le Targat}},
-  \citenamefont {Soltan-Panahi}, \citenamefont {Eckardt}, \citenamefont
-  {Lewenstein}, \citenamefont {Windpassinger},\ and\ \citenamefont
-  {Sengstock}}]{Struck2011}%
-  \BibitemOpen
-  \bibfield  {author} {\bibinfo {author} {\bibfnamefont {J.}~\bibnamefont
-  {Struck}}, \bibinfo {author} {\bibfnamefont {C.}~\bibnamefont
-  {{\"{O}}lschl{\"{a}}ger}}, \bibinfo {author} {\bibfnamefont {R.}~\bibnamefont
-  {{Le Targat}}}, \bibinfo {author} {\bibfnamefont {P.}~\bibnamefont
-  {Soltan-Panahi}}, \bibinfo {author} {\bibfnamefont {A.}~\bibnamefont
-  {Eckardt}}, \bibinfo {author} {\bibfnamefont {M.}~\bibnamefont {Lewenstein}},
-  \bibinfo {author} {\bibfnamefont {P.}~\bibnamefont {Windpassinger}}, \ and\
-  \bibinfo {author} {\bibfnamefont {K.}~\bibnamefont {Sengstock}},\ }\href@noop
-  {} {\bibfield  {journal} {\bibinfo  {journal} {Science}\ }\textbf {\bibinfo
-  {volume} {333}},\ \bibinfo {pages} {996} (\bibinfo {year}
-  {2011})}\BibitemShut {NoStop}%
-\bibitem [{\citenamefont {Simon}\ \emph {et~al.}(2011)\citenamefont {Simon},
-  \citenamefont {Bakr}, \citenamefont {Ma}, \citenamefont {Tai}, \citenamefont
-  {Preiss},\ and\ \citenamefont {Greiner}}]{Simon2011}%
-  \BibitemOpen
-  \bibfield  {author} {\bibinfo {author} {\bibfnamefont {J.}~\bibnamefont
-  {Simon}}, \bibinfo {author} {\bibfnamefont {W.~S.}\ \bibnamefont {Bakr}},
-  \bibinfo {author} {\bibfnamefont {R.}~\bibnamefont {Ma}}, \bibinfo {author}
-  {\bibfnamefont {M.~E.}\ \bibnamefont {Tai}}, \bibinfo {author} {\bibfnamefont
-  {P.~M.}\ \bibnamefont {Preiss}}, \ and\ \bibinfo {author} {\bibfnamefont
-  {M.}~\bibnamefont {Greiner}},\ }\href {\doibase 10.1038/nature09994}
-  {\bibfield  {journal} {\bibinfo  {journal} {Nature}\ }\textbf {\bibinfo
-  {volume} {472}},\ \bibinfo {pages} {307} (\bibinfo {year}
-  {2011})}\BibitemShut {NoStop}%
-\bibitem [{\citenamefont {Yan}\ \emph {et~al.}(2013)\citenamefont {Yan},
-  \citenamefont {Moses}, \citenamefont {Gadway}, \citenamefont {Covey},
-  \citenamefont {Hazzard}, \citenamefont {Rey}, \citenamefont {Jin},\ and\
-  \citenamefont {Ye}}]{Yan2013}%
-  \BibitemOpen
-  \bibfield  {author} {\bibinfo {author} {\bibfnamefont {B.}~\bibnamefont
-  {Yan}}, \bibinfo {author} {\bibfnamefont {S.~A.}\ \bibnamefont {Moses}},
-  \bibinfo {author} {\bibfnamefont {B.}~\bibnamefont {Gadway}}, \bibinfo
-  {author} {\bibfnamefont {J.~P.}\ \bibnamefont {Covey}}, \bibinfo {author}
-  {\bibfnamefont {K.~R.~A.}\ \bibnamefont {Hazzard}}, \bibinfo {author}
-  {\bibfnamefont {A.~M.}\ \bibnamefont {Rey}}, \bibinfo {author} {\bibfnamefont
-  {D.~S.}\ \bibnamefont {Jin}}, \ and\ \bibinfo {author} {\bibfnamefont
-  {J.}~\bibnamefont {Ye}},\ }\href {\doibase 10.1038/nature12483} {\bibfield
-  {journal} {\bibinfo  {journal} {Nature}\ }\textbf {\bibinfo {volume} {501}},\
-  \bibinfo {pages} {521} (\bibinfo {year} {2013})}\BibitemShut {NoStop}%
-\bibitem [{\citenamefont {Greif}\ \emph {et~al.}(2013)\citenamefont {Greif},
-  \citenamefont {Uehlinger}, \citenamefont {Jotzu}, \citenamefont {Tarruell},\
-  and\ \citenamefont {Esslinger}}]{Greif2013}%
-  \BibitemOpen
-  \bibfield  {author} {\bibinfo {author} {\bibfnamefont {D.}~\bibnamefont
-  {Greif}}, \bibinfo {author} {\bibfnamefont {T.}~\bibnamefont {Uehlinger}},
-  \bibinfo {author} {\bibfnamefont {G.}~\bibnamefont {Jotzu}}, \bibinfo
-  {author} {\bibfnamefont {L.}~\bibnamefont {Tarruell}}, \ and\ \bibinfo
-  {author} {\bibfnamefont {T.}~\bibnamefont {Esslinger}},\ }\href {\doibase
-  10.1126/science.1236362} {\bibfield  {journal} {\bibinfo  {journal}
-  {Science}\ }\textbf {\bibinfo {volume} {340}},\ \bibinfo {pages} {1307}
-  (\bibinfo {year} {2013})}\BibitemShut {NoStop}%
-\bibitem [{\citenamefont {Murmann}\ \emph {et~al.}(2015)\citenamefont
-  {Murmann}, \citenamefont {Deuretzbacher}, \citenamefont {Z{\"{u}}rn},
-  \citenamefont {Bjerlin}, \citenamefont {Reimann}, \citenamefont {Santos},
-  \citenamefont {Lompe},\ and\ \citenamefont {Jochim}}]{Murmann2015}%
-  \BibitemOpen
-  \bibfield  {author} {\bibinfo {author} {\bibfnamefont {S.}~\bibnamefont
-  {Murmann}}, \bibinfo {author} {\bibfnamefont {F.}~\bibnamefont
-  {Deuretzbacher}}, \bibinfo {author} {\bibfnamefont {G.}~\bibnamefont
-  {Z{\"{u}}rn}}, \bibinfo {author} {\bibfnamefont {J.}~\bibnamefont {Bjerlin}},
-  \bibinfo {author} {\bibfnamefont {S.~M.}\ \bibnamefont {Reimann}}, \bibinfo
-  {author} {\bibfnamefont {L.}~\bibnamefont {Santos}}, \bibinfo {author}
-  {\bibfnamefont {T.}~\bibnamefont {Lompe}}, \ and\ \bibinfo {author}
-  {\bibfnamefont {S.}~\bibnamefont {Jochim}},\ }\href {\doibase
-  10.1103/PhysRevLett.115.215301} {\bibfield  {journal} {\bibinfo  {journal}
-  {Phys. Rev. Lett.}\ }\textbf {\bibinfo {volume} {115}},\ \bibinfo {pages}
-  {215301} (\bibinfo {year} {2015})}\BibitemShut {NoStop}%
-\bibitem [{\citenamefont {Drewes}\ \emph {et~al.}(2017)\citenamefont {Drewes},
-  \citenamefont {Miller}, \citenamefont {Cocchi}, \citenamefont {Chan},
-  \citenamefont {Wurz}, \citenamefont {Gall}, \citenamefont {Pertot},
-  \citenamefont {Brennecke},\ and\ \citenamefont {K{\"{o}}hl}}]{Drewes2017}%
-  \BibitemOpen
-  \bibfield  {author} {\bibinfo {author} {\bibfnamefont {J.~H.}\ \bibnamefont
-  {Drewes}}, \bibinfo {author} {\bibfnamefont {L.~A.}\ \bibnamefont {Miller}},
-  \bibinfo {author} {\bibfnamefont {E.}~\bibnamefont {Cocchi}}, \bibinfo
-  {author} {\bibfnamefont {C.~F.}\ \bibnamefont {Chan}}, \bibinfo {author}
-  {\bibfnamefont {N.}~\bibnamefont {Wurz}}, \bibinfo {author} {\bibfnamefont
-  {M.}~\bibnamefont {Gall}}, \bibinfo {author} {\bibfnamefont {D.}~\bibnamefont
-  {Pertot}}, \bibinfo {author} {\bibfnamefont {F.}~\bibnamefont {Brennecke}}, \
-  and\ \bibinfo {author} {\bibfnamefont {M.}~\bibnamefont {K{\"{o}}hl}},\
-  }\href@noop {} {\bibfield  {journal} {\bibinfo  {journal} {Phys. Rev. Lett.}\
-  }\textbf {\bibinfo {volume} {118}},\ \bibinfo {pages} {170401} (\bibinfo
-  {year} {2017})}\BibitemShut {NoStop}%
-\bibitem [{\citenamefont {Bakr}\ \emph {et~al.}(2009)\citenamefont {Bakr},
-  \citenamefont {Gillen}, \citenamefont {Peng}, \citenamefont {F{\"{o}}lling},\
-  and\ \citenamefont {Greiner}}]{Bakr2009}%
-  \BibitemOpen
-  \bibfield  {author} {\bibinfo {author} {\bibfnamefont {W.~S.}\ \bibnamefont
-  {Bakr}}, \bibinfo {author} {\bibfnamefont {J.~I.}\ \bibnamefont {Gillen}},
-  \bibinfo {author} {\bibfnamefont {A.}~\bibnamefont {Peng}}, \bibinfo {author}
-  {\bibfnamefont {S.}~\bibnamefont {F{\"{o}}lling}}, \ and\ \bibinfo {author}
-  {\bibfnamefont {M.}~\bibnamefont {Greiner}},\ }\href {\doibase
-  10.1038/nature08482} {\bibfield  {journal} {\bibinfo  {journal} {Nature}\
-  }\textbf {\bibinfo {volume} {462}},\ \bibinfo {pages} {74} (\bibinfo {year}
-  {2009})}\BibitemShut {NoStop}%
-\bibitem [{\citenamefont {Sherson}\ \emph {et~al.}(2010)\citenamefont
-  {Sherson}, \citenamefont {Weitenberg}, \citenamefont {Endres}, \citenamefont
-  {Cheneau}, \citenamefont {Bloch},\ and\ \citenamefont {Kuhr}}]{Sherson2010}%
-  \BibitemOpen
-  \bibfield  {author} {\bibinfo {author} {\bibfnamefont {J.~F.}\ \bibnamefont
-  {Sherson}}, \bibinfo {author} {\bibfnamefont {C.}~\bibnamefont {Weitenberg}},
-  \bibinfo {author} {\bibfnamefont {M.}~\bibnamefont {Endres}}, \bibinfo
-  {author} {\bibfnamefont {M.}~\bibnamefont {Cheneau}}, \bibinfo {author}
-  {\bibfnamefont {I.}~\bibnamefont {Bloch}}, \ and\ \bibinfo {author}
-  {\bibfnamefont {S.}~\bibnamefont {Kuhr}},\ }\href {\doibase
-  10.1038/nature09378} {\bibfield  {journal} {\bibinfo  {journal} {Nature}\
-  }\textbf {\bibinfo {volume} {467}},\ \bibinfo {pages} {68} (\bibinfo {year}
-  {2010})}\BibitemShut {NoStop}%
-\bibitem [{\citenamefont {Haller}\ \emph {et~al.}(2015)\citenamefont {Haller},
-  \citenamefont {Hudson}, \citenamefont {Kelly}, \citenamefont {Cotta},
-  \citenamefont {Peaudecerf}, \citenamefont {Bruce},\ and\ \citenamefont
-  {Kuhr}}]{Haller2015}%
-  \BibitemOpen
-  \bibfield  {author} {\bibinfo {author} {\bibfnamefont {E.}~\bibnamefont
-  {Haller}}, \bibinfo {author} {\bibfnamefont {J.}~\bibnamefont {Hudson}},
-  \bibinfo {author} {\bibfnamefont {A.}~\bibnamefont {Kelly}}, \bibinfo
-  {author} {\bibfnamefont {D.~A.}\ \bibnamefont {Cotta}}, \bibinfo {author}
-  {\bibfnamefont {B.}~\bibnamefont {Peaudecerf}}, \bibinfo {author}
-  {\bibfnamefont {G.~D.}\ \bibnamefont {Bruce}}, \ and\ \bibinfo {author}
-  {\bibfnamefont {S.}~\bibnamefont {Kuhr}},\ }\href {\doibase
-  10.1038/nphys3403} {\bibfield  {journal} {\bibinfo  {journal} {Nature
-  Physics}\ }\textbf {\bibinfo {volume} {11}},\ \bibinfo {pages} {738}
-  (\bibinfo {year} {2015})}\BibitemShut {NoStop}%
-\bibitem [{\citenamefont {Cheuk}\ \emph {et~al.}(2015)\citenamefont {Cheuk},
-  \citenamefont {Nichols}, \citenamefont {Okan}, \citenamefont {Gersdorf},
-  \citenamefont {Ramasesh}, \citenamefont {Bakr}, \citenamefont {Lompe},\ and\
-  \citenamefont {Zwierlein}}]{Cheuk2015}%
-  \BibitemOpen
-  \bibfield  {author} {\bibinfo {author} {\bibfnamefont {L.~W.}\ \bibnamefont
-  {Cheuk}}, \bibinfo {author} {\bibfnamefont {M.~A.}\ \bibnamefont {Nichols}},
-  \bibinfo {author} {\bibfnamefont {M.}~\bibnamefont {Okan}}, \bibinfo {author}
-  {\bibfnamefont {T.}~\bibnamefont {Gersdorf}}, \bibinfo {author}
-  {\bibfnamefont {V.~V.}\ \bibnamefont {Ramasesh}}, \bibinfo {author}
-  {\bibfnamefont {W.~S.}\ \bibnamefont {Bakr}}, \bibinfo {author}
-  {\bibfnamefont {T.}~\bibnamefont {Lompe}}, \ and\ \bibinfo {author}
-  {\bibfnamefont {M.~W.}\ \bibnamefont {Zwierlein}},\ }\href {\doibase
-  10.1103/PhysRevLett.114.193001} {\bibfield  {journal} {\bibinfo  {journal}
-  {Phys. Rev. Lett.}\ }\textbf {\bibinfo {volume} {114}},\ \bibinfo {pages}
-  {193001} (\bibinfo {year} {2015})}\BibitemShut {NoStop}%
-\bibitem [{\citenamefont {Parsons}\ \emph {et~al.}(2015)\citenamefont
-  {Parsons}, \citenamefont {Huber}, \citenamefont {Mazurenko}, \citenamefont
-  {Chiu}, \citenamefont {Setiawan}, \citenamefont {Wooley-Brown}, \citenamefont
-  {Blatt},\ and\ \citenamefont {Greiner}}]{Parsons2015}%
-  \BibitemOpen
-  \bibfield  {author} {\bibinfo {author} {\bibfnamefont {M.~F.}\ \bibnamefont
-  {Parsons}}, \bibinfo {author} {\bibfnamefont {F.}~\bibnamefont {Huber}},
-  \bibinfo {author} {\bibfnamefont {A.}~\bibnamefont {Mazurenko}}, \bibinfo
-  {author} {\bibfnamefont {C.~S.}\ \bibnamefont {Chiu}}, \bibinfo {author}
-  {\bibfnamefont {W.}~\bibnamefont {Setiawan}}, \bibinfo {author}
-  {\bibfnamefont {K.}~\bibnamefont {Wooley-Brown}}, \bibinfo {author}
-  {\bibfnamefont {S.}~\bibnamefont {Blatt}}, \ and\ \bibinfo {author}
-  {\bibfnamefont {M.}~\bibnamefont {Greiner}},\ }\href {\doibase
-  10.1103/PhysRevLett.114.213002} {\bibfield  {journal} {\bibinfo  {journal}
-  {Phys. Rev. Lett.}\ }\textbf {\bibinfo {volume} {114}},\ \bibinfo {pages}
-  {213002} (\bibinfo {year} {2015})}\BibitemShut {NoStop}%
-\bibitem [{\citenamefont {Edge}\ \emph {et~al.}(2015)\citenamefont {Edge},
-  \citenamefont {Anderson}, \citenamefont {Jervis}, \citenamefont {McKay},
-  \citenamefont {Day}, \citenamefont {Trotzky},\ and\ \citenamefont
-  {Thywissen}}]{Edge2015}%
-  \BibitemOpen
-  \bibfield  {author} {\bibinfo {author} {\bibfnamefont {G.~J.~A.}\
-  \bibnamefont {Edge}}, \bibinfo {author} {\bibfnamefont {R.}~\bibnamefont
-  {Anderson}}, \bibinfo {author} {\bibfnamefont {D.}~\bibnamefont {Jervis}},
-  \bibinfo {author} {\bibfnamefont {D.~C.}\ \bibnamefont {McKay}}, \bibinfo
-  {author} {\bibfnamefont {R.}~\bibnamefont {Day}}, \bibinfo {author}
-  {\bibfnamefont {S.}~\bibnamefont {Trotzky}}, \ and\ \bibinfo {author}
-  {\bibfnamefont {J.~H.}\ \bibnamefont {Thywissen}},\ }\href {\doibase
-  10.1103/PhysRevA.92.063406} {\bibfield  {journal} {\bibinfo  {journal} {Phys.
-  Rev. A}\ }\textbf {\bibinfo {volume} {92}},\ \bibinfo {pages} {063406}
-  (\bibinfo {year} {2015})}\BibitemShut {NoStop}%
-\bibitem [{\citenamefont {Omran}\ \emph {et~al.}(2015)\citenamefont {Omran},
-  \citenamefont {Boll}, \citenamefont {Hilker}, \citenamefont {Kleinlein},
-  \citenamefont {Salomon}, \citenamefont {Bloch},\ and\ \citenamefont
-  {Gross}}]{Omran2015}%
-  \BibitemOpen
-  \bibfield  {author} {\bibinfo {author} {\bibfnamefont {A.}~\bibnamefont
-  {Omran}}, \bibinfo {author} {\bibfnamefont {M.}~\bibnamefont {Boll}},
-  \bibinfo {author} {\bibfnamefont {T.~A.}\ \bibnamefont {Hilker}}, \bibinfo
-  {author} {\bibfnamefont {K.}~\bibnamefont {Kleinlein}}, \bibinfo {author}
-  {\bibfnamefont {G.}~\bibnamefont {Salomon}}, \bibinfo {author} {\bibfnamefont
-  {I.}~\bibnamefont {Bloch}}, \ and\ \bibinfo {author} {\bibfnamefont
-  {C.}~\bibnamefont {Gross}},\ }\href {\doibase 10.1103/PhysRevLett.115.263001}
-  {\bibfield  {journal} {\bibinfo  {journal} {Phys. Rev. Lett.}\ }\textbf
-  {\bibinfo {volume} {115}},\ \bibinfo {pages} {263001} (\bibinfo {year}
-  {2015})}\BibitemShut {NoStop}%
-\bibitem [{\citenamefont {Greif}\ \emph {et~al.}(2016)\citenamefont {Greif},
-  \citenamefont {Parsons}, \citenamefont {Mazurenko}, \citenamefont {Chiu},
-  \citenamefont {Blatt}, \citenamefont {Huber}, \citenamefont {Ji},\ and\
-  \citenamefont {Greiner}}]{Greif2016}%
-  \BibitemOpen
-  \bibfield  {author} {\bibinfo {author} {\bibfnamefont {D.}~\bibnamefont
-  {Greif}}, \bibinfo {author} {\bibfnamefont {M.~F.}\ \bibnamefont {Parsons}},
-  \bibinfo {author} {\bibfnamefont {A.}~\bibnamefont {Mazurenko}}, \bibinfo
-  {author} {\bibfnamefont {C.~S.}\ \bibnamefont {Chiu}}, \bibinfo {author}
-  {\bibfnamefont {S.}~\bibnamefont {Blatt}}, \bibinfo {author} {\bibfnamefont
-  {F.}~\bibnamefont {Huber}}, \bibinfo {author} {\bibfnamefont
-  {G.}~\bibnamefont {Ji}}, \ and\ \bibinfo {author} {\bibfnamefont
-  {M.}~\bibnamefont {Greiner}},\ }\href {\doibase 10.1126/science.aad9041}
-  {\bibfield  {journal} {\bibinfo  {journal} {Science}\ }\textbf {\bibinfo
-  {volume} {351}},\ \bibinfo {pages} {953} (\bibinfo {year}
-  {2016})}\BibitemShut {NoStop}%
-\bibitem [{\citenamefont {Cheuk}\ \emph
-  {et~al.}(2016{\natexlab{a}})\citenamefont {Cheuk}, \citenamefont {Nichols},
-  \citenamefont {Lawrence}, \citenamefont {Okan}, \citenamefont {Zhang},\ and\
-  \citenamefont {Zwierlein}}]{Cheuk2016}%
-  \BibitemOpen
-  \bibfield  {author} {\bibinfo {author} {\bibfnamefont {L.~W.}\ \bibnamefont
-  {Cheuk}}, \bibinfo {author} {\bibfnamefont {M.~A.}\ \bibnamefont {Nichols}},
-  \bibinfo {author} {\bibfnamefont {K.~R.}\ \bibnamefont {Lawrence}}, \bibinfo
-  {author} {\bibfnamefont {M.}~\bibnamefont {Okan}}, \bibinfo {author}
-  {\bibfnamefont {H.}~\bibnamefont {Zhang}}, \ and\ \bibinfo {author}
-  {\bibfnamefont {M.~W.}\ \bibnamefont {Zwierlein}},\ }\href
-  {https://journals.aps.org/prl/pdf/10.1103/PhysRevLett.116.235301} {\bibfield
-  {journal} {\bibinfo  {journal} {Phys. Rev. Lett}\ }\textbf {\bibinfo {volume}
-  {116}},\ \bibinfo {pages} {235301} (\bibinfo {year}
-  {2016}{\natexlab{a}})}\BibitemShut {NoStop}%
-\bibitem [{\citenamefont {Parsons}\ \emph {et~al.}(2016)\citenamefont
-  {Parsons}, \citenamefont {Mazurenko}, \citenamefont {Chiu}, \citenamefont
-  {Ji}, \citenamefont {Greif},\ and\ \citenamefont {Greiner}}]{Parsons2016}%
-  \BibitemOpen
-  \bibfield  {author} {\bibinfo {author} {\bibfnamefont {M.~F.}\ \bibnamefont
-  {Parsons}}, \bibinfo {author} {\bibfnamefont {A.}~\bibnamefont {Mazurenko}},
-  \bibinfo {author} {\bibfnamefont {C.~S.}\ \bibnamefont {Chiu}}, \bibinfo
-  {author} {\bibfnamefont {G.}~\bibnamefont {Ji}}, \bibinfo {author}
-  {\bibfnamefont {D.}~\bibnamefont {Greif}}, \ and\ \bibinfo {author}
-  {\bibfnamefont {M.}~\bibnamefont {Greiner}},\ }\href {\doibase
-  10.1126/science.aag1430} {\bibfield  {journal} {\bibinfo  {journal}
-  {Science}\ }\textbf {\bibinfo {volume} {353}},\ \bibinfo {pages} {1253}
-  (\bibinfo {year} {2016})}\BibitemShut {NoStop}%
-\bibitem [{\citenamefont {Boll}\ \emph {et~al.}(2016)\citenamefont {Boll},
-  \citenamefont {Hilker}, \citenamefont {Salomon}, \citenamefont {Omran},
-  \citenamefont {Nespolo}, \citenamefont {Pollet}, \citenamefont {Bloch},\ and\
-  \citenamefont {Gross}}]{Boll2016}%
-  \BibitemOpen
-  \bibfield  {author} {\bibinfo {author} {\bibfnamefont {M.}~\bibnamefont
-  {Boll}}, \bibinfo {author} {\bibfnamefont {T.~A.}\ \bibnamefont {Hilker}},
-  \bibinfo {author} {\bibfnamefont {G.}~\bibnamefont {Salomon}}, \bibinfo
-  {author} {\bibfnamefont {A.}~\bibnamefont {Omran}}, \bibinfo {author}
-  {\bibfnamefont {J.}~\bibnamefont {Nespolo}}, \bibinfo {author} {\bibfnamefont
-  {L.}~\bibnamefont {Pollet}}, \bibinfo {author} {\bibfnamefont
-  {I.}~\bibnamefont {Bloch}}, \ and\ \bibinfo {author} {\bibfnamefont
-  {C.}~\bibnamefont {Gross}},\ }\href {\doibase 10.1126/science.aag1635}
-  {\bibfield  {journal} {\bibinfo  {journal} {Science}\ }\textbf {\bibinfo
-  {volume} {353}},\ \bibinfo {pages} {1257} (\bibinfo {year}
-  {2016})}\BibitemShut {NoStop}%
-\bibitem [{\citenamefont {Cheuk}\ \emph
-  {et~al.}(2016{\natexlab{b}})\citenamefont {Cheuk}, \citenamefont {Nichols},
-  \citenamefont {Lawrence}, \citenamefont {Okan}, \citenamefont {Zhang},
-  \citenamefont {Khatami}, \citenamefont {Trivedi}, \citenamefont {Paiva},
-  \citenamefont {Rigol},\ and\ \citenamefont {Zwierlein}}]{Cheuk2016a}%
-  \BibitemOpen
-  \bibfield  {author} {\bibinfo {author} {\bibfnamefont {L.~W.}\ \bibnamefont
-  {Cheuk}}, \bibinfo {author} {\bibfnamefont {M.~A.}\ \bibnamefont {Nichols}},
-  \bibinfo {author} {\bibfnamefont {K.~R.}\ \bibnamefont {Lawrence}}, \bibinfo
-  {author} {\bibfnamefont {M.}~\bibnamefont {Okan}}, \bibinfo {author}
-  {\bibfnamefont {H.}~\bibnamefont {Zhang}}, \bibinfo {author} {\bibfnamefont
-  {E.}~\bibnamefont {Khatami}}, \bibinfo {author} {\bibfnamefont
-  {N.}~\bibnamefont {Trivedi}}, \bibinfo {author} {\bibfnamefont
-  {T.}~\bibnamefont {Paiva}}, \bibinfo {author} {\bibfnamefont
-  {M.}~\bibnamefont {Rigol}}, \ and\ \bibinfo {author} {\bibfnamefont {M.~W.}\
-  \bibnamefont {Zwierlein}},\ }\href {\doibase 10.1126/science.aag3349}
-  {\bibfield  {journal} {\bibinfo  {journal} {Science}\ }\textbf {\bibinfo
-  {volume} {353}},\ \bibinfo {pages} {1260} (\bibinfo {year}
-  {2016}{\natexlab{b}})}\BibitemShut {NoStop}%
-\bibitem [{\citenamefont {Brown}\ \emph {et~al.}(2017)\citenamefont {Brown},
-  \citenamefont {Mitra}, \citenamefont {Guardado-Sanchez}, \citenamefont
-  {Schau{\ss}}, \citenamefont {Kondov}, \citenamefont {Khatami}, \citenamefont
-  {Paiva}, \citenamefont {Trivedi}, \citenamefont {Huse},\ and\ \citenamefont
-  {Bakr}}]{Brown2017}%
-  \BibitemOpen
-  \bibfield  {author} {\bibinfo {author} {\bibfnamefont {P.~T.}\ \bibnamefont
-  {Brown}}, \bibinfo {author} {\bibfnamefont {D.}~\bibnamefont {Mitra}},
-  \bibinfo {author} {\bibfnamefont {E.}~\bibnamefont {Guardado-Sanchez}},
-  \bibinfo {author} {\bibfnamefont {P.}~\bibnamefont {Schau{\ss}}}, \bibinfo
-  {author} {\bibfnamefont {S.~S.}\ \bibnamefont {Kondov}}, \bibinfo {author}
-  {\bibfnamefont {E.}~\bibnamefont {Khatami}}, \bibinfo {author} {\bibfnamefont
-  {T.}~\bibnamefont {Paiva}}, \bibinfo {author} {\bibfnamefont
-  {N.}~\bibnamefont {Trivedi}}, \bibinfo {author} {\bibfnamefont {D.~A.}\
-  \bibnamefont {Huse}}, \ and\ \bibinfo {author} {\bibfnamefont {W.~S.}\
-  \bibnamefont {Bakr}},\ }\href@noop {} {\bibfield  {journal} {\bibinfo
-  {journal} {Science}\ }\textbf {\bibinfo {volume} {357}},\ \bibinfo {pages}
-  {1385} (\bibinfo {year} {2017})}\BibitemShut {NoStop}%
-\bibitem [{\citenamefont {Hubbard}(1963)}]{Hubbard1963}%
-  \BibitemOpen
-  \bibfield  {author} {\bibinfo {author} {\bibfnamefont {J.}~\bibnamefont
-  {Hubbard}},\ }\href@noop {} {\bibfield  {journal} {\bibinfo  {journal} {Proc.
-  Roy. Soc. A: Mathematical, Physical and Engineering Sciences}\ }\textbf
-  {\bibinfo {volume} {276}},\ \bibinfo {pages} {238} (\bibinfo {year}
-  {1963})}\BibitemShut {NoStop}%
-\bibitem [{\citenamefont {Mazurenko}\ \emph {et~al.}(2017)\citenamefont
-  {Mazurenko}, \citenamefont {Chiu}, \citenamefont {Ji}, \citenamefont
-  {Parsons}, \citenamefont {Kan{\'{a}}sz-Nagy}, \citenamefont {Schmidt},
-  \citenamefont {Grusdt}, \citenamefont {Demler}, \citenamefont {Greif},\ and\
-  \citenamefont {Greiner}}]{Mazurenko2017}%
-  \BibitemOpen
-  \bibfield  {author} {\bibinfo {author} {\bibfnamefont {A.}~\bibnamefont
-  {Mazurenko}}, \bibinfo {author} {\bibfnamefont {C.~S.}\ \bibnamefont {Chiu}},
-  \bibinfo {author} {\bibfnamefont {G.}~\bibnamefont {Ji}}, \bibinfo {author}
-  {\bibfnamefont {M.~F.}\ \bibnamefont {Parsons}}, \bibinfo {author}
-  {\bibfnamefont {M.}~\bibnamefont {Kan{\'{a}}sz-Nagy}}, \bibinfo {author}
-  {\bibfnamefont {R.}~\bibnamefont {Schmidt}}, \bibinfo {author} {\bibfnamefont
-  {F.}~\bibnamefont {Grusdt}}, \bibinfo {author} {\bibfnamefont
-  {E.}~\bibnamefont {Demler}}, \bibinfo {author} {\bibfnamefont
-  {D.}~\bibnamefont {Greif}}, \ and\ \bibinfo {author} {\bibfnamefont
-  {M.}~\bibnamefont {Greiner}},\ }\href {\doibase 10.1038/nature22362}
-  {\bibfield  {journal} {\bibinfo  {journal} {Nature}\ }\textbf {\bibinfo
-  {volume} {545}},\ \bibinfo {pages} {462} (\bibinfo {year}
-  {2017})}\BibitemShut {NoStop}%
-\bibitem [{\citenamefont {Chiu}\ \emph {et~al.}(2018)\citenamefont {Chiu},
-  \citenamefont {Ji}, \citenamefont {Mazurenko}, \citenamefont {Greif},\ and\
-  \citenamefont {Greiner}}]{Chiu2018}%
-  \BibitemOpen
-  \bibfield  {author} {\bibinfo {author} {\bibfnamefont {C.~S.}\ \bibnamefont
-  {Chiu}}, \bibinfo {author} {\bibfnamefont {G.}~\bibnamefont {Ji}}, \bibinfo
-  {author} {\bibfnamefont {A.}~\bibnamefont {Mazurenko}}, \bibinfo {author}
-  {\bibfnamefont {D.}~\bibnamefont {Greif}}, \ and\ \bibinfo {author}
-  {\bibfnamefont {M.}~\bibnamefont {Greiner}},\ }\href@noop {} {\bibfield
-  {journal} {\bibinfo  {journal} {Phys. Rev. Lett.}\ }\textbf {\bibinfo
-  {volume} {120}},\ \bibinfo {pages} {243201} (\bibinfo {year}
-  {2018})}\BibitemShut {NoStop}%
-\bibitem [{\citenamefont {Blatt}\ \emph {et~al.}(2015)\citenamefont {Blatt},
-  \citenamefont {Mazurenko}, \citenamefont {Parsons}, \citenamefont {Chiu},
-  \citenamefont {Huber},\ and\ \citenamefont {Greiner}}]{Blatt2015}%
-  \BibitemOpen
-  \bibfield  {author} {\bibinfo {author} {\bibfnamefont {S.}~\bibnamefont
-  {Blatt}}, \bibinfo {author} {\bibfnamefont {A.}~\bibnamefont {Mazurenko}},
-  \bibinfo {author} {\bibfnamefont {M.~F.}\ \bibnamefont {Parsons}}, \bibinfo
-  {author} {\bibfnamefont {C.~S.}\ \bibnamefont {Chiu}}, \bibinfo {author}
-  {\bibfnamefont {F.}~\bibnamefont {Huber}}, \ and\ \bibinfo {author}
-  {\bibfnamefont {M.}~\bibnamefont {Greiner}},\ }\href {\doibase
-  10.1103/PhysRevA.92.021402} {\bibfield  {journal} {\bibinfo  {journal}
-  {Physical Review A}\ }\textbf {\bibinfo {volume} {92}},\ \bibinfo {pages}
-  {021402(R)} (\bibinfo {year} {2015})}\BibitemShut {NoStop}%
-\bibitem [{\citenamefont {Preiss}\ \emph {et~al.}(2015)\citenamefont {Preiss},
-  \citenamefont {Ma}, \citenamefont {Tai}, \citenamefont {Lukin}, \citenamefont
-  {Rispoli}, \citenamefont {Zupancic}, \citenamefont {Lahini}, \citenamefont
-  {Islam},\ and\ \citenamefont {Greiner}}]{Preiss2015}%
-  \BibitemOpen
-  \bibfield  {author} {\bibinfo {author} {\bibfnamefont {P.~M.}\ \bibnamefont
-  {Preiss}}, \bibinfo {author} {\bibfnamefont {R.}~\bibnamefont {Ma}}, \bibinfo
-  {author} {\bibfnamefont {M.~E.}\ \bibnamefont {Tai}}, \bibinfo {author}
-  {\bibfnamefont {A.}~\bibnamefont {Lukin}}, \bibinfo {author} {\bibfnamefont
-  {M.}~\bibnamefont {Rispoli}}, \bibinfo {author} {\bibfnamefont
-  {P.}~\bibnamefont {Zupancic}}, \bibinfo {author} {\bibfnamefont
-  {Y.}~\bibnamefont {Lahini}}, \bibinfo {author} {\bibfnamefont
-  {R.}~\bibnamefont {Islam}}, \ and\ \bibinfo {author} {\bibfnamefont
-  {M.}~\bibnamefont {Greiner}},\ }\href@noop {} {\bibfield  {journal} {\bibinfo
-   {journal} {Science}\ }\textbf {\bibinfo {volume} {347}} (\bibinfo {year}
-  {2015})}\BibitemShut {NoStop}%
-\bibitem [{\citenamefont {Choi}\ \emph {et~al.}(2016)\citenamefont {Choi},
-  \citenamefont {Hild}, \citenamefont {Zeiher}, \citenamefont {Schau{\ss}},
-  \citenamefont {Rubio-Abadal}, \citenamefont {Yefsah}, \citenamefont
-  {Khemani}, \citenamefont {Huse}, \citenamefont {Bloch},\ and\ \citenamefont
-  {Gross}}]{Choi2016}%
-  \BibitemOpen
-  \bibfield  {author} {\bibinfo {author} {\bibfnamefont {J.-Y.}\ \bibnamefont
-  {Choi}}, \bibinfo {author} {\bibfnamefont {S.}~\bibnamefont {Hild}}, \bibinfo
-  {author} {\bibfnamefont {J.}~\bibnamefont {Zeiher}}, \bibinfo {author}
-  {\bibfnamefont {P.}~\bibnamefont {Schau{\ss}}}, \bibinfo {author}
-  {\bibfnamefont {A.}~\bibnamefont {Rubio-Abadal}}, \bibinfo {author}
-  {\bibfnamefont {T.}~\bibnamefont {Yefsah}}, \bibinfo {author} {\bibfnamefont
-  {V.}~\bibnamefont {Khemani}}, \bibinfo {author} {\bibfnamefont {D.~A.}\
-  \bibnamefont {Huse}}, \bibinfo {author} {\bibfnamefont {I.}~\bibnamefont
-  {Bloch}}, \ and\ \bibinfo {author} {\bibfnamefont {C.}~\bibnamefont
-  {Gross}},\ }\href {http://science.sciencemag.org/content/352/6293/1547}
-  {\bibfield  {journal} {\bibinfo  {journal} {Science}\ }\textbf {\bibinfo
-  {volume} {352}},\ \bibinfo {pages} {1547} (\bibinfo {year}
-  {2016})}\BibitemShut {NoStop}%
-\bibitem [{\citenamefont {Huber}(2014)}]{Huber2014}%
-  \BibitemOpen
-  \bibfield  {author} {\bibinfo {author} {\bibfnamefont {F.}~\bibnamefont
-  {Huber}},\ }\emph {\bibinfo {title} {{Site-Resolved Imaging with the Fermi
-  Gas Microscope}}},\ \href@noop {} {Ph.D. thesis},\ \bibinfo  {school}
-  {Harvard University} (\bibinfo {year} {2014})\BibitemShut {NoStop}%
-\bibitem [{\citenamefont {Agrawal}(2013)}]{Agrawal2013}%
-  \BibitemOpen
-  \bibfield  {author} {\bibinfo {author} {\bibfnamefont {G.}~\bibnamefont
-  {Agrawal}},\ }\href@noop {} {\emph {\bibinfo {title} {{Nonlinear Fiber
-  Optics}}}},\ \bibinfo {edition} {5th}\ ed.\ (\bibinfo  {publisher} {Academic
-  Press},\ \bibinfo {year} {2013})\BibitemShut {NoStop}%
-\bibitem [{\citenamefont {Yoshida}\ \emph {et~al.}(1999)\citenamefont
-  {Yoshida}, \citenamefont {Gorlenko}, \citenamefont {Tanner}, \citenamefont
-  {Reitze}, \citenamefont {Mansell}, \citenamefont {Khazanov},\ and\
-  \citenamefont {Kulagin}}]{Yoshida1999}%
-  \BibitemOpen
-  \bibfield  {author} {\bibinfo {author} {\bibfnamefont {S.}~\bibnamefont
-  {Yoshida}}, \bibinfo {author} {\bibfnamefont {A.}~\bibnamefont {Gorlenko}},
-  \bibinfo {author} {\bibfnamefont {D.}~\bibnamefont {Tanner}}, \bibinfo
-  {author} {\bibfnamefont {D.}~\bibnamefont {Reitze}}, \bibinfo {author}
-  {\bibfnamefont {J.~D.}\ \bibnamefont {Mansell}}, \bibinfo {author}
-  {\bibfnamefont {E.}~\bibnamefont {Khazanov}}, \ and\ \bibinfo {author}
-  {\bibfnamefont {O.}~\bibnamefont {Kulagin}},\ }\href
-  {http://www.phys.ufl.edu/{~}tanner/PDFS/Yoshida99spie-ComponentsLIGO-abs.pdf}
-  {\bibfield  {journal} {\bibinfo  {journal} {SPIE}\ }\textbf {\bibinfo
-  {volume} {3736}},\ \bibinfo {pages} {430} (\bibinfo {year}
-  {1999})}\BibitemShut {NoStop}%
-\bibitem [{\citenamefont {Bechhoefer}(2005)}]{Bechhoefer2005}%
-  \BibitemOpen
-  \bibfield  {author} {\bibinfo {author} {\bibfnamefont {J.}~\bibnamefont
-  {Bechhoefer}},\ }\href@noop {} {\bibfield  {journal} {\bibinfo  {journal}
-  {Rev. Mod. Phys.}\ }\textbf {\bibinfo {volume} {77}},\ \bibinfo {pages} {783}
-  (\bibinfo {year} {2005})}\BibitemShut {NoStop}%
-\bibitem [{\citenamefont {Graeme}(1995)}]{Graeme1995}%
-  \BibitemOpen
-  \bibfield  {author} {\bibinfo {author} {\bibfnamefont {J.}~\bibnamefont
-  {Graeme}},\ }\href@noop {} {\emph {\bibinfo {title} {{Photodiode
-  Amplifiers}}}}\ (\bibinfo  {publisher} {McGraw Hill},\ \bibinfo {year}
-  {1995})\BibitemShut {NoStop}%
-\bibitem [{\citenamefont {Skogestad}(2003)}]{Skogestad2003}%
-  \BibitemOpen
-  \bibfield  {author} {\bibinfo {author} {\bibfnamefont {S.}~\bibnamefont
-  {Skogestad}},\ }\href@noop {} {\bibfield  {journal} {\bibinfo  {journal} {J.
-  Process Control}\ }\textbf {\bibinfo {volume} {13}},\ \bibinfo {pages} {291}
-  (\bibinfo {year} {2003})}\BibitemShut {NoStop}%
-\bibitem [{\citenamefont {Horowitz}\ and\ \citenamefont
-  {Hill}(2015)}]{Horowitz2015}%
-  \BibitemOpen
-  \bibfield  {author} {\bibinfo {author} {\bibfnamefont {P.}~\bibnamefont
-  {Horowitz}}\ and\ \bibinfo {author} {\bibfnamefont {W.}~\bibnamefont
-  {Hill}},\ }\href@noop {} {\emph {\bibinfo {title} {{The Art of
-  Electronics}}}},\ \bibinfo {edition} {3rd}\ ed.\ (\bibinfo  {publisher}
-  {Cambridge University Press},\ \bibinfo {address} {New York},\ \bibinfo
-  {year} {2015})\BibitemShut {NoStop}%
-\end{thebibliography}%
+\bibliography{latticeoptics}
 
 
 \end{document}
